add basic ui for note creation

--- a/src/WebUI/index.html
+++ b/src/WebUI/index.html
@@ -6,9 +6,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link
+        rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+    >
 </head>
 
-<body>
+<body style="height: 100%; margin: 0">
     <div id="app"></div>
     <script type="module" src=".fable-build/App.js"></script>
 </body>
